fixed some issues

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,9 +1,10 @@
 {
-    "compilerOptions": {
-      "target": "es6",
-      "module": "commonjs",
-      "outDir": "./dist",
-      "strict": true
-    }
+  "compilerOptions": {
+    "target": "ES6",
+    "module": "commonjs",
+    "outDir": "./build",
+    "rootDir": "",
+    "strict": true,
+    "esModuleInterop": true
   }
-  
+}
